[tool.poetry]
name = "django-ana"
version = "0.1.0"
description = "A request logger for Django"
authors = ["Vahid Al <thevahidal@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_ana"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
